<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".RegisterActivity">

<!--    TextView Register-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"/>

<!--    EditText Input Email-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/edtEmail"
        android:autofillHints="emailAddress"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/edtPassword"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/email_symbol"
        android:drawablePadding="20dp"/>


<!--    EditText Input Password-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/edtPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/lock"
        android:drawableEnd="@drawable/not_visible"
        android:drawablePadding="20dp"/>

<!--    Button Register-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:layout_below="@+id/edtPassword"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <!--Text view OR-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--OR--"
        android:layout_below="@id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textColor="#753C3F41"/>

    <!-- google sign in button-->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"/>

<!--    TextView Go to LoginActivity-->
    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/have_account"
        android:textAlignment="center"/>




</RelativeLayout>